menifest/ingestiondeployemnt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-service
  namespace: axion-app
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-ingestion-service
  template:
    metadata:
      labels:
        app: axion-ingestion-service
    spec:
      containers:
        - name: ingestion-service
          image: ghcr.io/contactanamika55/axion-ingestion-service:a7c0cf0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
