menifest/ingestion-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
  namespace: axion-app

spec:
  selector:
    app: axion-ingestion-service
  ports:
    
      - port: 8000
        targetPort: 8000
  type: ClusterIP
